force-app/main/default/objects/Opportunity/fields/Adequacy_of_current_position__c.field-meta.xml
<CustomField>
    <fullName>Adequacy_of_current_position__c</fullName>
    <label>Adequacy of current position</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EUPHORIA</fullName>
            </value>
            <value>
                <fullName>GREAT</fullName>
            </value>
            <value>
                <fullName>SECURE</fullName>
            </value>
            <value>
                <fullName>COMFORT</fullName>
            </value>
            <value>
                <fullName>OK</fullName>
            </value>
            <value>
                <fullName>CONCERN</fullName>
            </value>
            <value>
                <fullName>DISCOMFORT</fullName>
            </value>
            <value>
                <fullName>WORRY</fullName>
            </value>
            <value>
                <fullName>FEAR</fullName>
            </value>
            <value>
                <fullName>PANIC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>