force-app/main/default/objects/Opportunity/fields/Air_Line_Provision__c.field-meta.xml
<CustomField>
    <fullName>Air_Line_Provision__c</fullName>
    <label>Air Line Provision</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>