force-app/main/default/objects/Opportunity/fields/Air_Line_Provision_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Air_Line_Provision_Remarks__c</fullName>
    <label>Air Line Provision Remarks</label>
    <length>250</length>
    <type>Text</type>
</CustomField>