force-app/main/default/objects/Opportunity/fields/Best_Action_Plan__c.field-meta.xml
<CustomField>
    <fullName>Best_Action_Plan__c</fullName>
    <label>Best Action Plan</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>