force-app/main/default/objects/Opportunity/fields/Blue_Sheet__c.field-meta.xml
<CustomField>
    <fullName>Blue_Sheet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Blue Sheet</label>
    <type>Checkbox</type>
</CustomField>