force-app/main/default/objects/Opportunity/fields/Blue_Sheet_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Blue_Sheet_Created_Date__c</fullName>
    <label>Blue Sheet Created Date</label>
    <type>DateTime</type>
</CustomField>