force-app/main/default/objects/Opportunity/fields/BOQ_Machine_List__c.field-meta.xml
<CustomField>
    <fullName>BOQ_Machine_List__c</fullName>
    <label>BOQ/Machine List</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>