force-app/main/default/objects/Opportunity/fields/BOQ_Machine_List_Remarks__c.field-meta.xml
<CustomField>
    <fullName>BOQ_Machine_List_Remarks__c</fullName>
    <label>BOQ/Machine List Remarks</label>
    <length>250</length>
    <type>Text</type>
</CustomField>