force-app/main/default/objects/Opportunity/fields/BOQ_URS_Approved__c.field-meta.xml
<CustomField>
    <fullName>BOQ_URS_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BOQ &amp; URS</label>
    <type>Checkbox</type>
</CustomField>