force-app/main/default/objects/Opportunity/fields/Bypass_Validation__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Validation__c</fullName>
    <formula>BLANKVALUE(CurrentValidationTime__c, $System.OriginDateTime) &gt; NOW() - 0.00005787037 /*Five Seconds*/</formula>
    <label>Bypass Validation</label>
    <type>Checkbox</type>
</CustomField>