force-app/main/default/objects/Opportunity/fields/Capacity_Practical_Basket__c.field-meta.xml
<CustomField>
    <fullName>Capacity_Practical_Basket__c</fullName>
    <label>Capacity ( Practical ) Baskets/Hour</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>