force-app/main/default/objects/Opportunity/fields/Check_Hot_Air_Exhaust_Provision__c.field-meta.xml
<CustomField>
    <fullName>Check_Hot_Air_Exhaust_Provision__c</fullName>
    <label>Check Hot Air Exhaust Provision</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>