force-app/main/default/objects/Opportunity/fields/Check_Hot_Air_Exhaust_Provision_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Check_Hot_Air_Exhaust_Provision_Remarks__c</fullName>
    <label>Check Hot Air Exhaust Provision Remarks</label>
    <length>250</length>
    <type>Text</type>
</CustomField>