force-app/main/default/objects/Opportunity/fields/Check_Provision_for_Ventilation_in_Room__c.field-meta.xml
<CustomField>
    <fullName>Check_Provision_for_Ventilation_in_Room__c</fullName>
    <label>Check Provision for Ventilation in Room</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>