force-app/main/default/objects/Opportunity/fields/Check_Provision_for_Ventilation_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Check_Provision_for_Ventilation_Remarks__c</fullName>
    <inlineHelpText>Check the provision for ventilation in the room Remarks</inlineHelpText>
    <label>Check Provision for Ventilation Remarks</label>
    <length>250</length>
    <type>Text</type>
</CustomField>