force-app/main/default/objects/Opportunity/fields/Check_Room_Height_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Check_Room_Height_Remarks__c</fullName>
    <label>Check Room Height Remarks</label>
    <length>250</length>
    <type>Text</type>
</CustomField>