force-app/main/default/objects/Opportunity/fields/Check_Utility_Connection_Availability__c.field-meta.xml
<CustomField>
    <fullName>Check_Utility_Connection_Availability__c</fullName>
    <label>Check Utility Connection / Availability</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>