force-app/main/default/objects/Opportunity/fields/Check_Utility_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Check_Utility_Remarks__c</fullName>
    <inlineHelpText>Check Utility Connection / Availability  Remarks</inlineHelpText>
    <label>Check Utility Remarks</label>
    <length>250</length>
    <type>Text</type>
</CustomField>