force-app/main/default/objects/Opportunity/fields/Check_Water_Hardness_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Check_Water_Hardness_Remarks__c</fullName>
    <label>Check Water Hardness Remarks</label>
    <length>250</length>
    <type>Text</type>
</CustomField>