force-app/main/default/objects/Opportunity/fields/Choice_50__c.field-meta.xml
<CustomField>
    <fullName>Choice_50__c</fullName>
    <label>Choice 50</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OK</fullName>
            </value>
            <value>
                <fullName>Not OK</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>