force-app/main/default/objects/Opportunity/fields/Clear_Passage_for_Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Clear_Passage_for_Vehicle__c</fullName>
    <inlineHelpText>Check clear passage for vehicle
 (Truck &amp; Crane) movement &amp; Unloading.</inlineHelpText>
    <label>Clear Passage for Vehicle?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ok</fullName>
            </value>
            <value>
                <fullName>Not OK</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>