force-app/main/default/objects/Opportunity/fields/Clear_Passage_for_Vehicle_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Clear_Passage_for_Vehicle_Remarks__c</fullName>
    <label>Clear Passage for Vehicle Remarks</label>
    <length>250</length>
    <type>Text</type>
</CustomField>