force-app/main/default/objects/Opportunity/fields/Closed_Date_Changed_Count__c.field-meta.xml
<CustomField>
    <fullName>Closed_Date_Changed_Count__c</fullName>
    <label>Closed Date Changed Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>