force-app/main/default/objects/Opportunity/fields/Competition_Type__c.field-meta.xml
<CustomField>
    <fullName>Competition_Type__c</fullName>
    <label>Competition Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Buying From Someone Else</fullName>
            </value>
            <value>
                <fullName>Using Budget for Something Else</fullName>
            </value>
            <value>
                <fullName>Using Internal Resources</fullName>
            </value>
            <value>
                <fullName>Doing Nothing</fullName>
            </value>
            <value>
                <fullName>A</fullName>
                <isActive>false</isActive>
                <label>A</label>
            </value>
            <value>
                <fullName>B</fullName>
                <isActive>false</isActive>
                <label>B</label>
            </value>
            <value>
                <fullName>C</fullName>
                <isActive>false</isActive>
                <label>C</label>
            </value>
            <value>
                <fullName>D</fullName>
                <isActive>false</isActive>
                <label>D</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>