force-app/main/default/objects/Opportunity/fields/Continuous_load__c.field-meta.xml
<CustomField>
    <fullName>Continuous_load__c</fullName>
    <label>Continuous load</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>