force-app/main/default/objects/Opportunity/fields/CurrentVolume__c.field-meta.xml
<CustomField>
    <fullName>CurrentVolume__c</fullName>
    <label>Current Volume</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>