force-app/main/default/objects/Opportunity/fields/Degree_of_Influence__c.field-meta.xml
<CustomField>
    <fullName>Degree_of_Influence__c</fullName>
    <label>Degree of Influence</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>