force-app/main/default/objects/Opportunity/fields/Diameter_of_glass_in_cm__c.field-meta.xml
<CustomField>
    <fullName>Diameter_of_glass_in_cm__c</fullName>
    <label>Diameter of glass in cm</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>