force-app/main/default/objects/Opportunity/fields/Drain_Outlet_Size_Gravity_Drain_Req__c.field-meta.xml
<CustomField>
    <fullName>Drain_Outlet_Size_Gravity_Drain_Req__c</fullName>
    <label>Drain Outlet Size-Gravity Drain Req.</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>