force-app/main/default/objects/Opportunity/fields/Drainage_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Drainage_Remarks__c</fullName>
    <label>Drainage Remarks</label>
    <length>250</length>
    <type>Text</type>
</CustomField>