force-app/main/default/objects/Opportunity/fields/Dry_cleaning_Load__c.field-meta.xml
<CustomField>
    <fullName>Dry_cleaning_Load__c</fullName>
    <label>Dry cleaning Load</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>