force-app/main/default/objects/Opportunity/fields/Electric_Connection_Incoming_Supp_Vol__c.field-meta.xml
<CustomField>
    <fullName>Electric_Connection_Incoming_Supp_Vol__c</fullName>
    <label>Electric Connection (Incoming Supp Vol.)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>