force-app/main/default/objects/Opportunity/fields/Electric_connection_Incoming_Supply_Vol__c.field-meta.xml
<CustomField>
    <fullName>Electric_connection_Incoming_Supply_Vol__c</fullName>
    <label>Electric connection (Incoming Supply Vol</label>
    <length>255</length>
    <type>Text</type>
</CustomField>