force-app/main/default/objects/Opportunity/fields/Electrical_Provision_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Electrical_Provision_Remarks__c</fullName>
    <label>Electrical Provision Remarks</label>
    <length>250</length>
    <type>Text</type>
</CustomField>