force-app/main/default/objects/Opportunity/fields/Entry_side__c.field-meta.xml
<CustomField>
    <fullName>Entry_side__c</fullName>
    <label>Entry Side</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Left</fullName>
            </value>
            <value>
                <fullName>Right</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>