force-app/main/default/objects/Opportunity/fields/Glasses_in_line_40__c.field-meta.xml
<CustomField>
    <fullName>Glasses_in_line_40__c</fullName>
    <label>Glasses in line 40</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>