force-app/main/default/objects/Opportunity/fields/Glasses_per_basket_50__c.field-meta.xml
<CustomField>
    <fullName>Glasses_per_basket_50__c</fullName>
    <label>Glasses per basket 50</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>