force-app/main/default/objects/Opportunity/fields/Glasses_per_hour_40__c.field-meta.xml
<CustomField>
    <fullName>Glasses_per_hour_40__c</fullName>
    <label>Glasses per hour 40</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>