force-app/main/default/objects/Opportunity/fields/Heating_Type__c.field-meta.xml
<CustomField>
    <fullName>Heating_Type__c</fullName>
    <label>Heating Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Electric</fullName>
            </value>
            <value>
                <fullName>Steam</fullName>
            </value>
            <value>
                <fullName>Gas</fullName>
            </value>
            <value>
                <fullName>Dual (Electric &amp; Steam)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>