force-app/main/default/objects/Opportunity/fields/Heating_Type_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Heating_Type_Remarks__c</fullName>
    <label>Heating Type Remarks</label>
    <length>250</length>
    <type>Text</type>
</CustomField>