force-app/main/default/objects/Opportunity/fields/Hours_washing_in_a_day__c.field-meta.xml
<CustomField>
    <fullName>Hours_washing_in_a_day__c</fullName>
    <label>Hours -washing in a day</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>