force-app/main/default/objects/Opportunity/fields/Ideal_Customer_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Ideal_Customer_Criteria__c</fullName>
    <label>Ideal Customer Criteria</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>-5</fullName>
                <label>-5 Antagonistic Anti-Sponsor</label>
            </value>
            <value>
                <fullName>-4</fullName>
                <label>-4 Very Negative</label>
            </value>
            <value>
                <fullName>-3</fullName>
                <label>-3 Negative</label>
            </value>
            <value>
                <fullName>-2</fullName>
                <label>-2 Uninterested</label>
            </value>
            <value>
                <fullName>-1</fullName>
                <label>-1 Probably Won&apos;t Resist</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>1 Will Go Along</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>2 Interested</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>3 Supportive</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>4 Strongly Supportive</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>5 Enthusiastic Advocate</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>