force-app/main/default/objects/Opportunity/fields/IDW_Product_Type__c.field-meta.xml
<CustomField>
    <fullName>IDW_Product_Type__c</fullName>
    <label>Industrial Dishwasher Product Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>UC Glasswashers</fullName>
            </value>
            <value>
                <fullName>UC Dishwashers</fullName>
            </value>
            <value>
                <fullName>Hood Type Machines</fullName>
            </value>
            <value>
                <fullName>Rack-Conveyor Dishwashers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>