force-app/main/default/objects/Opportunity/fields/If_To_be_built_detail_Remarks__c.field-meta.xml
<CustomField>
    <fullName>If_To_be_built_detail_Remarks__c</fullName>
    <inlineHelpText>If &quot;To be built&quot; please share details Remarks</inlineHelpText>
    <label>If &quot;To be built&quot;  detail Remarks</label>
    <length>250</length>
    <type>Text</type>
</CustomField>