force-app/main/default/objects/Opportunity/fields/If_To_be_built_please_share_details__c.field-meta.xml
<CustomField>
    <fullName>If_To_be_built_please_share_details__c</fullName>
    <label>If &quot;To be built&quot; please share details</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Construction started</fullName>
            </value>
            <value>
                <fullName>Not yet started</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>