force-app/main/default/objects/Opportunity/fields/IFBP_Efficiency_hour__c.field-meta.xml
<CustomField>
    <fullName>IFBP_Efficiency_hour__c</fullName>
    <label>IFBP Efficiency/hour</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>