force-app/main/default/objects/Opportunity/fields/Industrial_Dishwasher_Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Industrial_Dishwasher_Product_Type__c</fullName>
    <label>Industrial Dishwasher Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Glass</fullName>
            </value>
            <value>
                <fullName>Plate</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>