force-app/main/default/objects/Opportunity/fields/Infrastructure_completed_in_30_days__c.field-meta.xml
<CustomField>
    <fullName>Infrastructure_completed_in_30_days__c</fullName>
    <label>Infrastructure completed in 30 days</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>