force-app/main/default/objects/Opportunity/fields/Installation_Except_GF_LB__c.field-meta.xml
<CustomField>
    <fullName>Installation_Except_GF_LB__c</fullName>
    <inlineHelpText>Except Ground floor / Lower level Basement . If installation in any other floors, ensure to provide static &amp; dynamic load details.</inlineHelpText>
    <label>Installation Except GF/LB</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>