force-app/main/default/objects/Opportunity/fields/Installation_Except_GF_LB_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Installation_Except_GF_LB_Remarks__c</fullName>
    <label>Installation Except GF/LB Remarks</label>
    <length>250</length>
    <type>Text</type>
</CustomField>