force-app/main/default/objects/Opportunity/fields/Ironing_Double_bed_sheets_day__c.field-meta.xml
<CustomField>
    <fullName>Ironing_Double_bed_sheets_day__c</fullName>
    <label>Ironing Double bed sheets / day</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>