force-app/main/default/objects/Opportunity/fields/Ironing_single_sheets_day__c.field-meta.xml
<CustomField>
    <fullName>Ironing_single_sheets_day__c</fullName>
    <label>Ironing single sheets / day</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>