force-app/main/default/objects/Opportunity/fields/Is_Bill_and_Ship_Correct__c.field-meta.xml
<CustomField>
    <fullName>Is_Bill_and_Ship_Correct__c</fullName>
    <formula>IF(
	AND
	(
		$User.Bypass_Validation_Rules__c = FALSE,
		ISPICKVAL(CurrencyIsoCode, &apos;INR&apos;),
		OR
		(
			Account.Bill_To_Name__c = &apos;&apos;, 
			Account.BillingStreet = &apos;&apos;, 
			Account.BillingCity = &apos;&apos;, 
			Account.BillingState = &apos;&apos;, 
			Account.BillingCountry = &apos;&apos;, 
			Account.BillingPostalCode = &apos;&apos;, 
			Account.Ship_to_Name__c = &apos;&apos;, 
			Account.ShippingStreet = &apos;&apos;, 
			Account.ShippingCity = &apos;&apos;, 
			Account.ShippingState = &apos;&apos;, 
			Account.ShippingCountry = &apos;&apos;,
			Account.ShippingPostalCode = &apos;&apos;
		)
	), 
	FALSE, 
	TRUE
)</formula>
    <label>Is Bill and Ship Correct</label>
    <type>Checkbox</type>
</CustomField>