force-app/main/default/objects/Opportunity/fields/Is_Segment_Correct__c.field-meta.xml
<CustomField>
    <fullName>Is_Segment_Correct__c</fullName>
    <formula>IF(
	AND
	(
		$User.Bypass_Validation_Rules__c = FALSE,
		ISPICKVAL(CurrencyIsoCode, &apos;INR&apos;),
		OR
		(
			ISPICKVAL(Account.Customer_Segment__c, &apos;&apos;), 
			ISPICKVAL(Account.Customer_Sub_segment__c, &apos;&apos;)
		)
	), 
	FALSE, 
	TRUE
)</formula>
    <label>Is Segment Correct</label>
    <type>Checkbox</type>
</CustomField>