force-app/main/default/objects/Opportunity/fields/Laundry_Set_up__c.field-meta.xml
<CustomField>
    <fullName>Laundry_Set_up__c</fullName>
    <label>Laundry Set up</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Existing</fullName>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>