force-app/main/default/objects/Opportunity/fields/Laundry_Set_up_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Laundry_Set_up_Remarks__c</fullName>
    <label>Laundry Set up Remarks</label>
    <length>250</length>
    <type>Text</type>
</CustomField>