force-app/main/default/objects/Opportunity/fields/Lead_Score__c.field-meta.xml
<CustomField>
    <fullName>Lead_Score__c</fullName>
    <formula>(
IF(TEXT( Purchase_timeline__c ) = &quot;0-30 days&quot;, 0.35,
IF(TEXT(Purchase_timeline__c ) = &quot;31-60 days&quot;, 0.20,
IF(TEXT(Purchase_timeline__c ) = &quot;61-90 days&quot;, 0.10,
IF(TEXT(Purchase_timeline__c ) = &quot;greater than 90 days&quot;, 0, 0)
)
)
) +
IF(TEXT( Budget__c ) = &quot;Yes, Own Source&quot;, 0.35,
IF(TEXT(Budget__c ) = &quot;Yes, Loan Approved&quot;, 0.35,
IF(TEXT(Budget__c ) = &quot;Loan In Progress&quot;, 0.20,
IF(TEXT(Budget__c ) = &quot;Budget not available&quot;, 0, 0)
)
)
) +
IF(TEXT( Space_availability__c ) = &quot;YES&quot;, 0.10,
IF(TEXT(Space_availability__c ) = &quot;NO&quot;, 0, 0)
) +
IF(TEXT( Site__c ) = &quot;YES&quot;, 0.10,
IF(TEXT(Site__c ) = &quot;NO&quot;, 0, 0)
) +
IF(TEXT( Infrastructure_completed_in_30_days__c ) = &quot;YES&quot;, 0.10,
IF(TEXT(Infrastructure_completed_in_30_days__c ) = &quot;NO&quot;, 0, 0)
)
)</formula>
    <label>Lead Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>