force-app/main/default/objects/Opportunity/fields/LeadIDText__c.field-meta.xml
<CustomField>
    <fullName>LeadIDText__c</fullName>
    <label>LeadIDText</label>
    <length>255</length>
    <type>Text</type>
</CustomField>