force-app/main/default/objects/Opportunity/fields/Lifecycle_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Lifecycle_Expiration_Date__c</fullName>
    <label>Lifecycle Expiration Date</label>
    <type>Date</type>
</CustomField>